fixed true and wrapping in results

--- a/css/style.css
+++ b/css/style.css
@@ -224,3 +224,7 @@ footer {
   min-height: 5rem;
   width: 100%;
 }
+
+#testArea td {
+  white-space:pre;
+}
